nginx-test/nginx-test-ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  routes:
    - host: nginx-test.n4mlz.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-test-service
                port:
                  number: 80
